--- a/src/app/pages/dashboard/dashboard.html
+++ b/src/app/pages/dashboard/dashboard.html
@@ -41,19 +41,7 @@
     <!-- Main content -->
     <main class="col-md-10 ms-sm-auto col-lg-10 px-md-4">
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Dashboard</h1>
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-            <span data-feather="calendar"></span>
-            This week
-          </button>
-        </div>
-      </div>
-
-      <div class="row mb-4">
-        <div class="col-12">
-          <p class="welcome">Welcome back, {{ username() }}!</p>
-        </div>
+        <h1 class="h2">Electric Dashboard</h1>
       </div>
 
       <div class="row mb-4">
